# Wind-Turbine-Designer

./: README.md  SUMMARY.md  build.py  example.py
docs/: index.rst
python/: README.md  pyproject.toml
python/tests/: test_cli.py  test_models.py
python/wind_turbine/: __init__.py  cli.py  gui.py  visualize.py
results/: 10W_design.csv  10W_design.json  50W_design.json  summary.csv  summary.json  test_100w.csv  test_100w.json  test_design.csv
rust/: Cargo.toml
rust/src/: core.rs  lib.rs  models.rs  types.rs
rust/src/tests/: core_test.rs  mod.rs
