[package]
name = "wind_calc"
version = "0.1.0"
edition = "2021"

[lib]
name = "wind_calc"
crate-type = ["cdylib"]  # shared lib for PyO3

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"